--- a/aboutMe.html
+++ b/aboutMe.html
@@ -27,7 +27,24 @@
     </nav>
 
     <main>
-        
+
+        <div class="text-center purple">
+            <h1>About the team</h1>
+            <p>I am a solo devoloper from Potsdam NY. I'm currently learning HTML, CSS, and javascript. I have around 4 months of experiance in total.</p>
+        </div>
+
+
+
+
+        <div class="row row-col-12 bg-blue">
+            <div class="col text-center">
+                <footer>
+                    <div class="copy">
+                        &copy; 2025 Xaiden Morey. This web project was created for educational purposes.
+                    </div>
+                </footer>
+            </div>
+        </div>
     </main>
 </body>
 </html>
