--- a/characters.html
+++ b/characters.html
@@ -27,7 +27,7 @@
     </nav>
 
     <main>
-        <div class="card-group">
+        <div class="card-group text-center">
             <div class="card">
               <img src="https://static.wikia.nocookie.net/marvel-rivals/images/1/15/Hulk_Tile.png/revision/latest/scale-to-width-down/137?cb=20240829014252" class="card-img-top" alt="Hulk">
               <div class="card-body">
@@ -49,7 +49,7 @@
               </div>
             </div>
           </div>
-          <div class="card-group">
+          <div class="card-group text-center last2">
             <div class="card">
               <img src="https://static.wikia.nocookie.net/marvel-rivals/images/5/55/Thor_Tile.png/revision/latest/scale-to-width-down/137?cb=20240829014416" class="card-img-top" alt="Thor">
               <div class="card-body">
@@ -72,7 +72,7 @@
               </div>
             </div>
           </div>
-          <div class="card-group">
+          <div class="card-group text-center last2">
             <div class="card">
               <img src="https://static.wikia.nocookie.net/marvel-rivals/images/c/c5/Peni_Parker_Tile.png/revision/latest/scale-to-width-down/137?cb=20240829014307" class="card-img-top" alt="Peni Parker">
               <div class="card-body">
@@ -95,7 +95,7 @@
               </div>
             </div>
           </div>
-          <div class="card-group">
+          <div class="card-group text-center last2">
             <div class="card">
               <img src="https://static.wikia.nocookie.net/marvel-rivals/images/0/01/Black_Widow_Tile.png/revision/latest/scale-to-width-down/137?cb=20241205125614" class="card-img-top" alt="Black Widow">
               <div class="card-body">
@@ -118,7 +118,7 @@
               </div>
             </div>
           </div>
-          <div class="card-group">
+          <div class="card-group text-center last2">
             <div class="card">
               <img src="https://static.wikia.nocookie.net/marvel-rivals/images/b/b9/Iron_Fist_Tile.png/revision/latest/scale-to-width-down/138?cb=20241202004547" class="card-img-top" alt="Iron Fist">
               <div class="card-body">
@@ -141,7 +141,7 @@
               </div>
             </div>
           </div>
-          <div class="card-group">
+          <div class="card-group text-center last2">
             <div class="card">
               <img src="https://static.wikia.nocookie.net/marvel-rivals/images/c/ca/Mister_Fantastic_Tile.png/revision/latest/scale-to-width-down/138?cb=20250115005746" class="card-img-top" alt="Mr. Fantastic">
               <div class="card-body">
@@ -164,7 +164,7 @@
               </div>
             </div>
           </div>
-          <div class="card-group">
+          <div class="card-group text-center last2">
             <div class="card">
               <img src="https://static.wikia.nocookie.net/marvel-rivals/images/2/2c/Psylocke_Title.png/revision/latest/scale-to-width-down/137?cb=20241128093410" class="card-img-top" alt="Psylock">
               <div class="card-body">
@@ -187,7 +187,7 @@
               </div>
             </div>
           </div>
-          <div class="card-group">
+          <div class="card-group text-center last2">
             <div class="card">
               <img src="https://static.wikia.nocookie.net/marvel-rivals/images/9/95/Squirrel_Girl_Tile.png/revision/latest/scale-to-width-down/137?cb=20241201090714" class="card-img-top" alt="Squirl Girl">
               <div class="card-body">
@@ -210,7 +210,7 @@
               </div>
             </div>
           </div>
-          <div class="card-group">
+          <div class="card-group text-center last2">
             <div class="card">
               <img src="https://static.wikia.nocookie.net/marvel-rivals/images/1/1c/The_Punisher_Tile.png/revision/latest/scale-to-width-down/137?cb=20240829014415" class="card-img-top" alt="Punisher">
               <div class="card-body">
@@ -221,7 +221,7 @@
             <div class="card">
               <img src="https://static.wikia.nocookie.net/marvel-rivals/images/b/ba/Winter_Soldier_Tile.png/revision/latest/scale-to-width-down/137?cb=20240829014418" class="card-img-top" alt="Winter Soilder">
               <div class="card-body">
-                <h5 class="card-title">Winter Soilder/h5>
+                <h5 class="card-title">Winter Soilder</h5>
                 <p class="card-text">Winter Solider is a dueslist. He can grapple and pull poeple in. He can punch and uppercut people. He can also do and electical pucnh that shoots a projectile that slows. His ultimate is where he flys up and slams into poeple marking them, if the get to 20% hp they die instanstly and he gets his ultimate back.</p>
               </div>
             </div>
@@ -233,83 +233,81 @@
               </div>
             </div>
           </div>
-          <div class="card-group">
+          <div class="card-group text-center last2">
             <div class="card">
-              <img src="..." class="card-img-top" alt="...">
+              <img src="https://static.wikia.nocookie.net/marvel-rivals/images/4/44/Adam_Warlock_Tile.png/revision/latest/scale-to-width-down/137?cb=20240829014243" class="card-img-top" alt="Adam Warlock">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <h5 class="card-title">Adam Warlock</h5>
+                <p class="card-text">Adam Warlock is a streategist. He can soul bond with teammates making damage taken split between everyone soul bonded. He has a haeling bean that instantly heals people. He can also charge his shots and shoot them in a burst. His ultimate will revive everyone on his team that is eliminated in a large circle around him.</p>
               </div>
             </div>
             <div class="card">
-              <img src="..." class="card-img-top" alt="...">
+              <img src="https://static.wikia.nocookie.net/marvel-rivals/images/f/f5/Cloak_%26_Dagger_Tile.png/revision/latest/scale-to-width-down/138?cb=20241205160322" class="card-img-top" alt="Cloak and Dagger">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                <h5 class="card-title">Cloak and Dagger</h5>
+                <p class="card-text">Cloak and Dagger is a strategist. She has two forms. Her first form is dagger. She can put out a healing feild. She can push a light screen through teammates that gives them more healing. In her cloak form she can swipe around her making her and teammates invisible and immune to damage for a tiny bit. She can also push a dark screen through enemies that blind people and makes them take more damage. In her ultimate she dashes forward 4 time creating a feild that heals teammates and damages enemies.</p>
               </div>
             </div>
             <div class="card">
-              <img src="..." class="card-img-top" alt="...">
+              <img src="https://static.wikia.nocookie.net/marvel-rivals/images/6/6e/Invisible_Woman_Tile.png/revision/latest/scale-to-width-down/138?cb=20250115005311" class="card-img-top" alt="Invisible Women">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-              </div>
-            </div>
-          </div>
-          <div class="card-group">
-            <div class="card">
-              <img src="..." class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              </div>
-            </div>
-            <div class="card">
-              <img src="..." class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-              </div>
-            </div>
-            <div class="card">
-              <img src="..." class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                <h5 class="card-title">Invisible Women</h5>
+                <p class="card-text">Invisible women is a strategist. They can create a damaging feild that also pulls enemies in. She has a force push or a force pull. She also has a souble jump that makes her invisible and heals her. Her ultimate puts down a circle that makes teammates inside of it invisible.</p>
               </div>
             </div>
           </div>
-          <div class="card-group">
+          <div class="card-group text-center last2">
             <div class="card">
-              <img src="..." class="card-img-top" alt="...">
+              <img src="https://static.wikia.nocookie.net/marvel-rivals/images/7/7f/Jeff_The_Land_Shark_Tile.png/revision/latest/scale-to-width-down/137?cb=20240829014254" class="card-img-top" alt="Jeff the Land Shark">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <h5 class="card-title">Jeff the Land Shark</h5>
+                <p class="card-text">Jeff the Land Shark is a strategist. He can swim underground to increase his speed. He can also shoot out bubble that heal and give a speed boost when you walk into them.</p>
               </div>
             </div>
+        </div>
             <div class="card">
-              <img src="..." class="card-img-top" alt="...">
+              <img src="https://static.wikia.nocookie.net/marvel-rivals/images/2/2d/Loki_Tile.png/revision/latest/scale-to-width-down/137?cb=20240829014257" class="card-img-top" alt="Loki">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                <h5 class="card-title">Loki</h5>
+                <p class="card-text">Loki is a strategist. He can put down clones that also shoot where he his shooting. He can go invisible and drop and clone where he used it. He can put a healing feild on him and his clones. His ultimate lets him transform into another character in the game and gives him there ultimate instantly.</p>
               </div>
             </div>
-            <div class="card-group">
-              <div class="card">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                </div>
+        </div>
+            <div class="card">
+              <img src="https://static.wikia.nocookie.net/marvel-rivals/images/5/59/Luna_Snow_Tile.png/revision/latest/scale-to-width-down/137?cb=20240829014258" class="card-img-top" alt="Luna Snow">
+              <div class="card-body">
+                <h5 class="card-title">Luna Snow</h5>
+                <p class="card-text">Luna Snow is a strategist. She can put a buff on a teammate that makes them get healed when she heals someone else. She has a snow ball that freezes an enemy. She also has an ability that turns he primary fire into a beam that pierces through people allowing her to hit mutiple people. Her ultimate makes her dance either giving healing or a power boost to teamates around her.</p>
               </div>
-              <div class="card">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                </div>
+            </div>
+        </div>
+          <div class="card-group text-center last2">
+            <div class="card">
+              <img src="https://static.wikia.nocookie.net/marvel-rivals/images/e/e3/Mantis_Tile.png/revision/latest/scale-to-width-down/137?cb=20240829014305" class="card-img-top" alt="Mantis">
+              <div class="card-body">
+                <h5 class="card-title">Mantis</h5>
+                <p class="card-text">Mantis is a strategist. She can either power boost herself or a teamate. She can also give a regen effect to teammates. Her ultimate make a large circle around her that heals very quickly.</p>
               </div>
-          </div>
+            </div>
+        </div>
+            <div class="card">
+              <img src="https://static.wikia.nocookie.net/marvel-rivals/images/7/7d/Rocket_Raccoon_Tile.png/revision/latest/scale-to-width-down/137?cb=20240829014308" class="card-img-top" alt="Rocket Racoon">
+              <div class="card-body">
+                <h5 class="card-title">Rocket Racoon</h5>
+                <p class="card-text">Rocket Raccon is a strategist. He can put down a respawn point that also throws out armor packs for people. He also has dashes to make him more maneuverable. his utimate puts down a becan that gives the team a power boost.</p>
+              </div>
+            </div>
+        </div>
+
+          <div class="row row-col-12 bg-blue">
+            <div class="col text-center">
+                <footer>
+                    <div class="copy">
+                        &copy; 2025 Xaiden Morey. This web project was created for educational purposes.
+                    </div>
+                </footer>
+            </div>
+        </div>
     </main>
 </body>
 </html>
