--- a/tierlist.html
+++ b/tierlist.html
@@ -27,7 +27,47 @@
     </nav>
 
     <main>
-        
+
+        <div class="tierlist">
+            <img src="img/Screenshot 2025-01-10 at 12.03.41 PM.png" alt="tier list" class="img-fluid">
+        </div>
+        <div class="row row-col-12">
+            <div class="col text-center bg-dark">
+                <div class="text-light">
+            <h2>S Tier</h2>
+            <p>These characters are fantastic to play. At least one of these characters in each type should be payed in each match. The yare extreamly strong and are all capable of swinging games in your teams favor.</p>
+        </div>
+        <div class="row row-col-12 bg-white">
+            <div class="col text-center">
+            <h2>A Tier</h2>
+            <p>These characters are also very strong however they do fall short in some areas. There ults might not be able to swing the game but they can still get value while being played.</p>
+        </div>
+        <div class="row row-col-12">
+            <div class="col text-center bg-dark">
+                <div class="text-light">
+            <h2>B Tier</h2>
+            <p>These characters are ok but they are out classed by the characters above them. They are capable of being strong if used properly.</p>
+        </div>
+        <div class="row row-col-12 bg-white">
+            <div class="col text-center">
+            <h2>C Tier</h2>
+            <p>These guys kinda suck. They're not supper bad but they deffintly need some buffs.</p>
+        </div>
+        <div class="row row-col-12">
+            <div class="col text-center bg-dark">
+                <div class="text-light">
+            <h2>F Tier</h2>
+            <p>These guys are terrible. If you play them and you make a mistake then you're throwing your games.</p>
+        </div>
+        <div class="row row-col-12 bg-blue">
+            <div class="col text-center">
+                <footer>
+                    <div class="copy">
+                        &copy; 2025 Xaiden Morey. This web project was created for educational purposes.
+                    </div>
+                </footer>
+            </div>
+        </div>
     </main>
 </body>
 </html>
