--- a/characters.html
+++ b/characters.html
@@ -256,7 +256,7 @@
               </div>
             </div>
           </div>
-          <div class="card-group text-center last2">
+          <div class="card-group text-center">
             <div class="card">
               <img src="https://static.wikia.nocookie.net/marvel-rivals/images/7/7f/Jeff_The_Land_Shark_Tile.png/revision/latest/scale-to-width-down/137?cb=20240829014254" class="card-img-top" alt="Jeff the Land Shark">
               <div class="card-body">
@@ -271,9 +271,8 @@
                 <p class="card-text">Loki is a strategist. He can put down clones that also shoot where he his shooting. He can go invisible and drop and clone where he used it. He can put a healing feild on him and his clones. His ultimate lets him transform into another character in the game and gives him there ultimate instantly.</p>
               </div>
             </div>
-        </div>
             <div class="card">
-              <img src="https://static.wikia.nocookie.net/marvel-rivals/images/5/59/Luna_Snow_Tile.png/revision/latest/scale-to-width-down/137?cb=20240829014258" class="card-img-top" alt="Luna Snow">
+              <img src="https://static.wikia.nocookie.net/marvel-rivals/images/5/59/Luna_Snow_Tile.png/revision/latest/scale-to-width-down/137?cb=20240829014258" class="card-img-top" alt="Loki">
               <div class="card-body">
                 <h5 class="card-title">Luna Snow</h5>
                 <p class="card-text">Luna Snow is a strategist. She can put a buff on a teammate that makes them get healed when she heals someone else. She has a snow ball that freezes an enemy. She also has an ability that turns he primary fire into a beam that pierces through people allowing her to hit mutiple people. Her ultimate makes her dance either giving healing or a power boost to teamates around her.</p>
